src/objects/Premier_Tier__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pathways - Expansion</fullName>
                </value>
                <value>
                    <fullName>Global Strategic Agreement</fullName>
                </value>
                <value>
                    <fullName>Shift Series</fullName>
                </value>
                <value>
                    <fullName>DOLP4</fullName>
                </value>
                <value>
                    <fullName>Optics Agreements</fullName>
                </value>
                <value>
                    <fullName>DOLP3</fullName>
                </value>
                <value>
                    <fullName>DOLP2</fullName>
                </value>
                <value>
                    <fullName>DOLP1</fullName>
                </value>
                <value>
                    <fullName>Pathways - Recruitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>A criteria in Premier Admin Tiering so that I differentiate tiers by contract.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>AOP</fullName>
                </value>
                <value>
                    <fullName>CAT2</fullName>
                </value>
                <value>
                    <fullName>Conflict</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>LVC</fullName>
                </value>
                <value>
                    <fullName>Near Site</fullName>
                </value>
                <value>
                    <fullName>Net Dev Excluded</fullName>
                </value>
                <value>
                    <fullName>Net Dev Purchasing Requirement</fullName>
                </value>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision CO</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision LO</fullName>
                </value>
                <value>
                    <fullName>Pop Up</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Visionworks</fullName>
                </value>
                <value>
                    <fullName>VSP Retail</fullName>
                </value>
                <value>
                    <fullName>VSP Ventures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Blank Date = No end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive_VSP_Patient_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive VSP Patient Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyewear_Minimum_Formula__c</fullName>
        <description>Used in Monthly Batch Job</description>
        <formula>Eyewear_Minimum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eyewear Minimum Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eyewear_Minimum__c</fullName>
        <label>Eyewear Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Fitting_and_Adjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Fitting and Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Action__c</fullName>
        <inlineHelpText>The selection of &quot;&lt;&quot; below or &quot;Top Tier&quot;, will determine the hierarchy location of where the new or edited tier needs to go in the list of existing tiers.</inlineHelpText>
        <label>Hierarchy Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>Top_Tier</fullName>
                    <label>Top Tier</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                    <isActive>false</isActive>
                    <label>&gt;</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Selection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Hierarchy Action = Top Tier, Hierarchy Selection must be blank.</inlineHelpText>
        <label>Hierarchy Selection</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected Hierarchy Selection Tier has a status of Inactive.</errorMessage>
            <filterItems>
                <field>Premier_Tier__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, VSP Technical User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Premier Tiers</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lens_Minimum_Formula__c</fullName>
        <description>Used in Monthly Batch Job</description>
        <formula>Lens_Minimum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lens Minimum Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lens_Minimum__c</fullName>
        <label>Lens Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Formula__c</fullName>
        <formula>Order__c</formula>
        <label>Hierarchy Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Hierarchy Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retinal_Imaging_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retinal Imaging Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Name_AutoNumber__c</fullName>
        <label>Tier Name AutoNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Name_Id__c</fullName>
        <label>Tier Name Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Purchases_LTM_Formula__c</fullName>
        <description>Used in Monthly Batch Job</description>
        <formula>Total_Purchases_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Purchases LTM Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Purchases_LTM__c</fullName>
        <label>Total Purchases LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VSP_Flex_Amount__c</fullName>
        <formula>Total_Purchases_LTM__c - Eyewear_Minimum__c -  Lens_Minimum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VSP Flex Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Premier Tier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Hierarchy_Action__c</columns>
        <columns>Hierarchy_Selection__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Order_Formula__c</columns>
        <columns>Tier_Name_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Tiers</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Hierarchy_Selection__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Tiers</label>
    </listViews>
    <listViews>
        <fullName>All_Future_Tiers</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Hierarchy_Selection__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <label>All Future Tiers</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Tiers</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Hierarchy_Selection__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Tiers</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premier Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR32_Effective_Date_Validation</fullName>
        <active>true</active>
        <description>Effective Date must be a future date</description>
        <errorConditionFormula>OR(ISNEW(),
ISCHANGED(Effective_Date__c))
&amp;&amp;
Effective_Date__c &lt;= Today()
&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>You must enter an Effective Date greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNEW(),
ISCHANGED(End_Date__c))
&amp;&amp;
End_Date__c &lt;= Effective_Date__c 
&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You must enter an End Date greater than Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_Active_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) = &apos;Active&apos;

&amp;&amp; 

NOT(ISCHANGED(Status__c))

&amp;&amp;

OR(
ISCHANGED(Description__c),
ISCHANGED(Effective_Date__c),
ISCHANGED(Exclusive_VSP_Patient_Offers__c),
ISCHANGED(Eyewear_Minimum__c),	
ISCHANGED(Free_Fitting_and_Adjustments__c),  
ISCHANGED(Hierarchy_Action__c),    
ISCHANGED(Hierarchy_Selection__c),
ISCHANGED(Lens_Minimum__c),  
ISCHANGED(Retinal_Imaging_Indicator__c),
ISCHANGED(Name),
ISCHANGED(Total_Purchases_LTM__c),	
ISCHANGED(VSP_Flex_Amount__c),
ISCHANGED(Contract_Type__c),
ISCHANGED(Agreement_Type__c)
)

&amp;&amp;

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)

&amp;&amp;

NOT(OR(ISCHANGED(Bypass_Validation__c ), 
						Bypass_Validation__c = True))</errorConditionFormula>
        <errorMessage>This Tier can not be edited when it is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_Child_Hierarchy</fullName>
        <active>true</active>
        <errorConditionFormula>Hierarchy_Selection__r.Order__c &gt; Order__c
	
	&amp;&amp;
	
	
	TEXT(Status__c) = &apos;Active&apos; 
	
	&amp;&amp;
	
	ISCHANGED(Hierarchy_Selection__c)
	
	&amp;&amp; 

NOT(OR(ISCHANGED(Bypass_Validation__c ), 
Bypass_Validation__c = True))</errorConditionFormula>
        <errorMessage>You can&apos;t select a Parent record that is lower than your current order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_End_Date_Future</fullName>
        <active>true</active>
        <description>Check that End is in the Future</description>
        <errorConditionFormula>ISCHANGED(End_Date__c)

&amp;&amp;
OR(
End_Date__c &lt; TODAY() + 1,
End_Date__c &lt; Effective_Date__c 
)
&amp;&amp;

NOT(OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;VSP Technical User&quot;)
)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date must be greater than the Effective Date. The End Date must be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_Hierarchy_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Hierarchy_Action__c) = &apos;&lt;&apos; 

&amp;&amp; 

ISBLANK(Hierarchy_Selection__c)</errorConditionFormula>
        <errorMessage>Tier must have a Hierarchy Selection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_Inactive_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) = &apos;Inactive&apos; 

&amp;&amp; 

NOT(ISCHANGED(Status__c)) 

&amp;&amp;

NOT(OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;) 
)

&amp;&amp; 

NOT(OR(ISCHANGED(Bypass_Validation__c ), 
Bypass_Validation__c = True))</errorConditionFormula>
        <errorMessage>This Tier can not be edited when it is Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSP_Premier_Top_Tier</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Hierarchy_Action__c) = &apos;Top_Tier&apos;

&amp;&amp;

NOT(ISBLANK(Hierarchy_Selection__c) )</errorConditionFormula>
        <errorMessage>Top Tier cannot have a Hierarchy Selection.</errorMessage>
    </validationRules>
</CustomObject>